--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
           <label for="" class="text-orange subtitle is-1 has-text-left"></label>
         </p>
         <br>
+        
         <button onclick="kiosk()" type="button" class="button has-text-left">VIP</button>
-        <button onclick="kiosk2()" type="button" class="button has-text-left">Undefined</button>
+        <!--<button onclick="kiosk2()" type="button" class="button has-text-left">Undefined</button>-->
       </div>
       <div class="column is-4">
         <figure class="image img-animate">
