--- a/contador.html
+++ b/contador.html
@@ -65,7 +65,7 @@
   </div>
   
   <!--//CONTADOR-->
-
+  <div class="bt-10"></div>
   <!--TAGS-->
   <div class="accordion-item">
     <h2 class="accordion-header" id="panelsStayOpen-headingThree">
@@ -117,13 +117,11 @@
         </div>
       </div>
     </div>
+    <hr>
     <!--//TAGS-->
     <!--CONFIGURAÇÕES-->
-    <div class="container">
-      
-    </div>
+    <div class="container"></div>
     <div class="accordion-item">
-
       <h2 class="accordion-header" id="panelsStayOpen-headingFor">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
@@ -131,7 +129,6 @@
           RECURSOS
         </button>
       </h2>
-
       <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse show"
         aria-labelledby="panelsStayOpen-headingFour">
         <div class="accordion-body">
