New Button and Bug Fixes.

--- a/contador.html
+++ b/contador.html
@@ -112,6 +112,9 @@
 
             <button title="Cancelado" class="button btn-cancel" type="button" style="width:100%" class="" onclick="copyText(cancel)">
             </button>
+
+            <button title="Contato recente" class="button btn-cttrecente" type="button" style="width:100%" class="" onclick="copyText(cttrecente)">
+            </button>
           </div>
 
         </div>
@@ -137,30 +140,30 @@
           <div class="justify-content-center align-items-center">
             <select id="prodHours" class="form-select" onchange="getProductivity()">
               <option selected>Horário</option>
-              <option value="1">01h00</option>
-              <option value="2">02h00</option>
-              <option value="3">03h00</option>
-              <option value="4">04h00</option>
-              <option value="5">05h00</option>
-              <option value="6">06h00</option>
-              <option value="7">07h00</option>
-              <option value="8">08h00</option>
-              <option value="9">09h00</option>
-              <option value="10">10h00</option>
-              <option value="11">11h00</option>
-              <option value="12">12h00</option>
-              <option value="13">13h00</option>
-              <option value="14">14h00</option>
-              <option value="15">15h00</option>
-              <option value="16">16h00</option>
-              <option value="17">17h00</option>
-              <option value="18">18h00</option>
-              <option value="19">19h00</option>
-              <option value="20">20h00</option>
-              <option value="21">21h00</option>
-              <option value="22">22h00</option>
-              <option value="23">23h00</option>
-              <option value="24">00h00</option>
+              <option value="1">00h00</option>
+              <option value="2">01h00</option>
+              <option value="3">02h00</option>
+              <option value="4">03h00</option>
+              <option value="5">04h00</option>
+              <option value="6">05h00</option>
+              <option value="7">06h00</option>
+              <option value="8">07h00</option>
+              <option value="9">08h00</option>
+              <option value="10">09h00</option>
+              <option value="11">10h00</option>
+              <option value="12">11h00</option>
+              <option value="13">12h00</option>
+              <option value="14">13h00</option>
+              <option value="15">14h00</option>
+              <option value="16">15h00</option>
+              <option value="17">16h00</option>
+              <option value="18">17h00</option>
+              <option value="19">18h00</option>
+              <option value="20">19h00</option>
+              <option value="21">20h00</option>
+              <option value="22">21h00</option>
+              <option value="23">22h00</option>
+              <option value="24">23h00</option>
             </select>
             <input id="input" type="number" min="0" max="999">
             <button id="salvar" class="button salvar" onclick="setProductivity()">
