--- a/contador.html
+++ b/contador.html
@@ -19,6 +19,7 @@
 
   <title>VIP</title>
   <link rel="stylesheet" href="css/main.css">
+  <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
 </head>
 
 <body>
@@ -33,15 +34,20 @@
           <!-- COLOCAR AQUI AS INFOS -->
           <br>
           <div class="accordion-item">
-            <lord-icon src="https://cdn.lordicon.com/kbtmbyzy.json" trigger="hover"
-              colors="primary:#8930e8,secondary:#e8308c" stroke="100" style="width:35px;height:35px">
-            </lord-icon>
+            <i class="justify-content-center">
+              <lord-icon src="https://cdn.lordicon.com/kbtmbyzy.json" trigger="hover"
+                colors="primary:#8930e8,secondary:#e8308c" stroke="100" style="width:35px;height:35px">
+              </lord-icon>
+
+            </i>
             <h1 id="timeText"></h1>
             <div class="flex-box">
               <div>
                 <!--BOTÃO DE SOMAR +1-->
                 <button onclick="add()" class="btn_13h_add green btn btn-outline">
-                  <img src="assets/arrow-green.svg" alt="">
+                  <lord-icon src="https://cdn.lordicon.com/mecwbjnp.json" trigger="hover"
+                    colors="primary:#00a005,secondary:#00a005" stroke="100" style="width:32px;height:32px">
+                  </lord-icon>
                 </button>
               </div>
 
@@ -53,7 +59,9 @@
               <div>
                 <!--BOTÃO DE SUBTRAIR -1 -->
                 <button onclick="remove()" class="btn_13h_remove red btn btn-outline">
-                  <img src="assets/arrow-red.svg" alt="">
+                  <lord-icon src="https://cdn.lordicon.com/rivoakkk.json" trigger="hover"
+                    colors="primary:#ce0000,secondary:#ce0000" stroke="100" style="width:32px;height:32px">
+                  </lord-icon>
                 </button>
               </div>
             </div>
@@ -206,7 +214,7 @@
     </div>
     <!--//Configurações-->
   </div>
-  <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
