--- a/contador.html
+++ b/contador.html
@@ -45,9 +45,7 @@
               <div>
                 <!--BOTÃO DE SOMAR +1-->
                 <button onclick="add()" class="btn_13h_add green btn btn-outline">
-                  <lord-icon src="https://cdn.lordicon.com/mecwbjnp.json" trigger="hover"
-                    colors="primary:#00a005,secondary:#00a005" stroke="100" style="width:32px;height:32px">
-                  </lord-icon>
+                  <img src="assets/arrow-green.svg" alt="">
                 </button>
               </div>
 
@@ -59,9 +57,7 @@
               <div>
                 <!--BOTÃO DE SUBTRAIR -1 -->
                 <button onclick="remove()" class="btn_13h_remove red btn btn-outline">
-                  <lord-icon src="https://cdn.lordicon.com/rivoakkk.json" trigger="hover"
-                    colors="primary:#ce0000,secondary:#ce0000" stroke="100" style="width:32px;height:32px">
-                  </lord-icon>
+                  <img src="assets/arrow-red.svg" alt="">
                 </button>
               </div>
             </div>
